--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <h1>About Me</h1>
 
     <h2>Introduction</h2>
-    <p>Hello! I'm [Your Name], a passionate [Your Profession/Field] based in [Your Location]. I love exploring new technologies and creating innovative solutions to complex problems.</p>
+    <p>Hello! I'm Farham, a passionate [Your Profession/Field] based in Brooklyn. I love exploring new technologies and creating innovative solutions to complex problems.</p>
 
-    <h2>Skills</h2>
+    <h2>Skills</h2> 
     <ul>
         <li>Web Development (HTML, CSS, JavaScript)</li>
         <li>Python Programming</li>
